# AdderApp

./: App.tsx  SumModule.js  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  adder.cpp
android/app/src/main/java/com/adderapp/: AdderModule.java  AdderPackage.java  MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: AdderModule.h  AdderModuleImplementationlmm  Podfile  adder.cpp
ios/AdderApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/AdderApp.xcodeproj/: project.pbxproj
ios/AdderApp.xcodeproj/xcshareddata/xcschemes/: AdderApp.xcscheme
ios/AdderApp.xcworkspace/: contents.xcworkspacedata
ios/AdderAppTests/: AdderAppTests.m
